--- a/html/index-2.html
+++ b/html/index-2.html
@@ -39,7 +39,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarToggler">
-        <ul class="navbar-nav ml-auto mt-3 mt-lg-0">
+        <!-- <ul class="navbar-nav ml-auto mt-3 mt-lg-0">
           <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">Home</a>
@@ -60,9 +60,10 @@
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
-        </ul>
+        </ul> -->
         <div class="ml-auto my-2 my-lg-0">
-          <button class="btn btn-primary rounded-pill">Download Now</button>
+          <!-- <button class="btn btn-primary rounded-pill"> Register Now</button> -->
+          <a href="https://www.buybestpolicy.com/poslogin" class="btn btn-primary rounded-pill" target="_blank">Register Now</a>
         </div>
       </div>
     </div>
@@ -82,7 +83,7 @@
               BBP is a registered insurance provider associated with around 40+ companies that provide insurance.
             </p>
 
-            <a href="#" class="btn btn-dark">Register Now</a>
+            <a href="https://www.buybestpolicy.com/poslogin" class="btn btn-dark"  target="_blank">Register Now</a>
 
           </div>
           <div class="col-lg-6 d-none d-lg-block wow zoomIn">
@@ -97,7 +98,10 @@
 
   <div class="page-section no-scroll">
     <div class="container">
-      <h2 class="text-center wow fadeIn">Our Main Features</h2>
+      <h2 class="text-center wow fadeIn">Who can become a <a href="https://www.buybestpolicy.com/poslogin">POSP with Buybestpolicy?</a>
+      </h2>
+     <p class="text-center wow fadeIn">  who wants to 
+      <a href="https://www.buybestpolicy.com/poslogin">earn a little more on the side.</a></p>
 
       <div class="row justify-content-center mt-5">
         <div class="col-lg-16">
@@ -167,7 +171,7 @@
             However, the said POSP has to go through a 15-hour training with Buybestpolicy, give a test and receive a
             certificate to officially start selling policies.
           </p>
-          <a href="#" class="btn btn-outline-primary rounded-pill">Register Now</a>
+          <a href="https://www.buybestpolicy.com/poslogin" class="btn btn-outline-primary rounded-pill"  target="_blank">Register Now</a>
         </div>
       </div>
     </div>
@@ -175,7 +179,12 @@
 
   <div class="page-section">
     <div class="container">
+      <div class="text-center wow fadeIn">
+        <h2 class="mb-4">How to become a POSP with Buybestpolicy </h2>
+        <!-- <p>Become a <a href="#">partners?</a></p> -->
+      </div>
       <div class="row">
+      
         <div class="col-lg-4 py-3">
           <div class="iconic-list">
             <div class="iconic-item wow fadeInUp">
@@ -185,7 +194,8 @@
                   tempor invidunt ut labore et dolore</p>
               </div>
               <div class="iconic-md iconic-text bg-warning fg-white rounded-circle">
-                <span class="mai-analytics"></span>
+                <!-- <span class="mai-analytics"></span> -->
+                <span class="">1</span>
               </div>
             </div>
             <div class="iconic-item wow fadeInUp">
@@ -195,7 +205,8 @@
                   tempor invidunt ut labore et dolore</p>
               </div>
               <div class="iconic-md iconic-text bg-info fg-white rounded-circle">
-                <span class="mai-shield-checkmark"></span>
+                <!-- <span class="mai-shield-checkmark"></span> -->
+                <span class="">2</span>
               </div>
             </div>
             <div class="iconic-item wow fadeInUp">
@@ -205,7 +216,8 @@
                   tempor invidunt ut labore et dolore</p>
               </div>
               <div class="iconic-md iconic-text bg-indigo fg-white rounded-circle">
-                <span class="mai-desktop-outline"></span>
+                <!-- <span class="mai-desktop-outline"></span> -->
+                <span class="">3</span>
               </div>
             </div>
           </div>
@@ -219,7 +231,8 @@
           <div class="iconic-list">
             <div class="iconic-item wow fadeInUp">
               <div class="iconic-md iconic-text bg-warning fg-white rounded-circle">
-                <span class="mai-speedometer-outline"></span>
+                <!-- <span class="mai-speedometer-outline"></span> -->
+                <span class="">4</span>
               </div>
               <div class="iconic-content">
                 <h5>Give online Test </h5>
@@ -229,7 +242,8 @@
             </div>
             <div class="iconic-item wow fadeInUp">
               <div class="iconic-md iconic-text bg-success fg-white rounded-circle">
-                <span class="mai-aperture"></span>
+                <!-- <span class="mai-aperture"></span> -->
+                <span class="">5</span>
               </div>
               <div class="iconic-content">
                 <h5>Receive a certificate </h5>
@@ -239,7 +253,8 @@
             </div>
             <div class="iconic-item wow fadeInUp">
               <div class="iconic-md iconic-text bg-indigo fg-white rounded-circle">
-                <span class="mai-stats-chart-outline"></span>
+                <!-- <span class="mai-stats-chart-outline"></span> -->
+                <span class="">6</span>
               </div>
               <div class="iconic-content">
                 <h5>Start earning limitlessly.</h5>
@@ -400,23 +415,23 @@
       <div class="row justify-content-center align-items-center">
         <div class="col-lg-5 py-3 wow fadeInUp">
           <h2 class="mb-4">Frequently <br> asked question</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, minus id consectetur accusantium illum
+          <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, minus id consectetur accusantium illum
             necessitatibus, non quia sit laboriosam aut libero. Maiores neque velit modi, mollitia nostrum alias
-            quibusdam et.</p>
+            quibusdam et.</p> -->
 
           <p class="fg-primary fw-medium">Need more helps?</p>
           <a href="#" class="btn btn-gradient btn-split-icon rounded-pill">
-            <span class="icon mai-call-outline"></span> Contact Us
+            <span class="icon mai-call-outline"></span> Contact us On 9453321
           </a>
         </div>
         <div class="col-lg-7 py-3 no-scroll-x">
           <div class="accordion accordion-gap" id="accordionFAQ">
             <div class="accordion-item wow fadeInRight">
               <div class="accordion-trigger" id="headingFour">
-                <button class="btn collapsed" type="button" data-toggle="collapse" data-target="#collapse1"
-                  aria-expanded="false" aria-controls="collapse1">How much will I earn? </button>
+                <button class="btn " type="button" data-toggle="" data-target=""
+                  aria-expanded="" aria-controls="">How much will I earn? </button>
               </div>
-              <div id="collapse1" class="collapse" aria-labelledby="headingFour" data-parent="#accordionFAQ">
+              <div id="collapse1" class="" aria-labelledby="" data-parent="#">
                 <div class="accordion-content">
                   <p>As a Buybestpolicy POSP, you can earn limitlessly. It is a fast payout, letting you work at your
                     own comfort.</p>
@@ -435,10 +450,10 @@
             </div>
             <div class="accordion-item wow fadeInRight">
               <div class="accordion-trigger" id="headingFive">
-                <button class="btn" type="button" data-toggle="collapse" data-target="#collapse2" aria-expanded="true"
-                  aria-controls="collapse2">What do I actually have to do as a Buybestpolicy POSP?</button>
+                <button class="btn" type="button" data-toggle="" data-target="" aria-expanded=""
+                  aria-controls="">What do I actually have to do as a Buybestpolicy POSP?</button>
               </div>
-              <div id="collapse2" class="collapse show" aria-labelledby="headingFive" data-parent="#accordionFAQ">
+              <div id="collapse2" class="" aria-labelledby="" data-parent="">
                 <div class="accordion-content">
                   <p>A person, who decides to pursue their career as a Buybestpolicy POSP can get quotation forms for
                     Motor, Health and other POSP products. Simultaneously, they can sell insurance to others.</p>
@@ -521,10 +536,10 @@
   <div class="page-section">
     <div class="container">
       <div class="text-center wow fadeIn">
-        <h2 class="mb-4">Benefits of becoming a Buybestpolicy POSP. </h2>
-        <p>Become a <a href="#">partners?</a></p>
+        <h2 class="mb-4">Benefits of becoming a <a href="https://www.buybestpolicy.com/poslogin">Buybestpolicy POSP.</a> </h2>
+        <!-- <p>Become a <a href="#">partners?</a></p> -->
       </div>
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-5 justify-content-center align-items-center mt-5">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 justify-content-center align-items-center mt-5">
         <div class="p-3 wow zoomIn">
           <div class="theme-list">
         <li class="list-item">Earn Limitlessly</li>
@@ -562,17 +577,17 @@
         </div>
         <div class="p-3 wow zoomIn">
           <div class="theme-list">
-            <li class="list-item">No prior experience required </li>
+            <li class="list-item">Be your OWN boss </li>
               </div>
         </div>
-        <div class="p-3 wow zoomIn">
+        <div class="p-3 wow zoomIn justify-content-center">
           <div class="theme-list">
             <li class="list-item">Work at any time from anywhere </li>
               </div>
         </div>
         <div class="p-3 wow zoomIn">
           <div class="theme-list">
-            <li class="list-item">Be your OWN boss </li>
+            <li class="list-item">No prior experience required </li>
               </div>
         </div>
       </div>
@@ -580,7 +595,7 @@
   </div>
 
   <div class="page-footer-section bg-dark fg-white">
-    <div class="container mb-5">
+    <!-- <div class="container mb-5">
       <div class="row justify-content-center text-center wow fadeInUp">
         <div class="col-lg-8">
           <div class="text-center mb-3">
@@ -599,12 +614,12 @@
           </ul>
         </div>
       </div>
-    </div>
-
-    <hr>
+    </div> -->
+<!-- 
+    <hr> -->
     <!-- Please don't remove or modify the credits below -->
-    <p class="text-center mt-4 wow fadeIn">Copyright &copy; 2020 <a href="https://www.macodeid.com/"
-        class="fg-white fw-medium">MACode ID</a>. All right reserved</p>
+    <p class="text-center wow fadeIn">Copyright &copy; 2021 <a href="https://www.prathasystech.in/"
+        class="fg-white fw-medium">Pratha Systech Pvt Ltd</a>. All right reserved</p>
   </div>
 
   <script src="../assets/js/jquery-3.5.1.min.js"></script>
