--- a/html/index-2.html
+++ b/html/index-2.html
@@ -11,7 +11,7 @@
 
   <meta name="copyright" content="MACode ID, https://www.macodeid.com/">
 
-  <title>Mobster - One page app template</title>
+  <title>Buybestpolicy</title>
 
   <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon">
 
