banner img change

--- a/html/index-2.html
+++ b/html/index-2.html
@@ -13,7 +13,7 @@
 
   <title>Buybestpolicy</title>
 
-  <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/img/Logo-01.svg" type="image/x-icon">
 
   <link rel="stylesheet" href="../assets/css/maicons.css">
 
@@ -31,7 +31,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark navbar-floating">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="../assets/favicon-light.png" alt="" width="40">
+        <img src="../assets/img/Logo-01.svg" alt="" width="40">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
         aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,7 +69,7 @@
     </div>
   </nav>
 
-  <div class="page-hero-section bg-image hero-home-2" style="background-image: url(../assets/img/bg_hero_2.svg);">
+  <div class="page-hero-section bg-image hero-home-2" style="background-image: url(../assets/img/bg_hero_2-01.svg);">
     <div class="hero-caption">
       <div class="container fg-white h-100">
         <div class="row align-items-center h-100">
@@ -88,7 +88,7 @@
           </div>
           <div class="col-lg-6 d-none d-lg-block wow zoomIn">
             <div class="img-place mobile-preview shadow floating-animate">
-              <img src="../assets/img/app_showcase.svg" alt="">
+              <img src="../assets/img/app_showcase-01.svg" alt="">
             </div>
           </div>
         </div>
@@ -161,7 +161,7 @@
       <div class="row align-items-center">
         <div class="col-lg-7 wow fadeIn">
           <div class="img-place">
-            <img src="../assets/img/app_preview_4.png" alt="">
+            <img src="../assets/img/illustration_contact-01.svg" alt="">
           </div>
         </div>
         <div class="col-lg-5 pl-lg-5 wow fadeInUp">
