--- a/html/index-2.html
+++ b/html/index-2.html
@@ -120,7 +120,7 @@
               <div class="col-lg-3">
                 <div class="card card-body border-0 text-center shadow pt-5">
                   <div class="svg-icon mx-auto mb-4">
-                    <img src="../assets/img/icons/payment.png" alt="">
+                    <img src="../assets/img/icons/testimony.svg" alt="">
                   </div>
                   <h5 class="fg-gray"> Homemakers </h5>
                   <p class="fs-small">Becoming a POSP with BBP is the perfect way to earn if you are a homemaker. You
