step img update

--- a/html/index-2.html
+++ b/html/index-2.html
@@ -24,6 +24,15 @@
   <link rel="stylesheet" href="../assets/css/bootstrap.css">
 
   <link rel="stylesheet" href="../assets/css/mobster.css">
+
+  <style>
+    @media(min-width:992px){
+    .benefits{
+    flex: 0 0 auto;
+    max-width: 100%;
+  }
+}
+  </style>
 </head>
 
 <body>
@@ -31,7 +40,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark navbar-floating">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="../assets/img/Logo-01.svg" alt="" width="40">
+        <img src="../assets/img/Logo-01.svg" alt="" width="200">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
         aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
@@ -108,9 +117,9 @@
           <div class="row justify-content-center">
             <div class="row">
               <div class="col-lg-3">
-                <div class="card card-body border-0 text-center shadow pt-5">
+                <div class="card card-body border-0 text-center shadow pt-5" style="min-height: 100%;">
                   <div class="svg-icon mx-auto mb-4">
-                    <img src="../assets/img/icons/payment.png" alt="">
+                    <img src="../assets/img/icons/concept.png" alt="">
                   </div>
                   <h5 class="fg-gray"> Students </h5>
                   <p class="fs-small">Even if you are studying, you can still apply to become a POPS.All you need is a
@@ -118,9 +127,9 @@
                 </div>
               </div>
               <div class="col-lg-3">
-                <div class="card card-body border-0 text-center shadow pt-5">
+                <div class="card card-body border-0 text-center shadow pt-5" style="min-height: 100%;">
                   <div class="svg-icon mx-auto mb-4">
-                    <img src="../assets/img/icons/testimony.svg" alt="">
+                    <img src="../assets/img/icons/concept.png" alt="">
                   </div>
                   <h5 class="fg-gray"> Homemakers </h5>
                   <p class="fs-small">Becoming a POSP with BBP is the perfect way to earn if you are a homemaker. You
@@ -128,7 +137,7 @@
                 </div>
               </div>
               <div class="col-lg-3">
-                <div class="card card-body border-0 text-center shadow pt-5">
+                <div class="card card-body border-0 text-center shadow pt-5" style="min-height: 100%;">
                   <div class="svg-icon mx-auto mb-4">
                     <img src="../assets/img/icons/concept.png" alt="">
                   </div>
@@ -139,7 +148,7 @@
                 </div>
               </div>
               <div class="col-lg-3">
-                <div class="card card-body border-0 text-center shadow pt-5">
+                <div class="card card-body border-0 text-center shadow pt-5" style="min-height: 100%;">
                   <div class="svg-icon mx-auto mb-4">
                     <img src="../assets/img/icons/concept.png" alt="">
                   </div>
@@ -190,8 +199,7 @@
             <div class="iconic-item wow fadeInUp">
               <div class="iconic-content">
                 <h5>Download the BBP mobile app.</h5>
-                <p class="fs-small">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                  tempor invidunt ut labore et dolore</p>
+                <p class="fs-small"><img src="/assets/img/step01.jpeg" alt="" class=""></p>
               </div>
               <div class="iconic-md iconic-text bg-warning fg-white rounded-circle">
                 <!-- <span class="mai-analytics"></span> -->
@@ -201,8 +209,7 @@
             <div class="iconic-item wow fadeInUp">
               <div class="iconic-content">
                 <h5>Upload the Documents. </h5>
-                <p class="fs-small">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                  tempor invidunt ut labore et dolore</p>
+                <p class="fs-small"><img src="/assets/img/step02.jpeg" alt="" class=""></p>
               </div>
               <div class="iconic-md iconic-text bg-info fg-white rounded-circle">
                 <!-- <span class="mai-shield-checkmark"></span> -->
@@ -212,8 +219,7 @@
             <div class="iconic-item wow fadeInUp">
               <div class="iconic-content">
                 <h5>Start training with experts </h5>
-                <p class="fs-small">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                  tempor invidunt ut labore et dolore</p>
+                <p class="fs-small"><img src="/assets/img/step03.jpeg" alt="" class=""></p>
               </div>
               <div class="iconic-md iconic-text bg-indigo fg-white rounded-circle">
                 <!-- <span class="mai-desktop-outline"></span> -->
@@ -236,8 +242,7 @@
               </div>
               <div class="iconic-content">
                 <h5>Give online Test </h5>
-                <p class="fs-small">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                  tempor invidunt ut labore et dolore</p>
+                <p class="fs-small"><img src="/assets/img/step04.jpeg" alt="" class=""></p>
               </div>
             </div>
             <div class="iconic-item wow fadeInUp">
@@ -247,8 +252,7 @@
               </div>
               <div class="iconic-content">
                 <h5>Receive a certificate </h5>
-                <p class="fs-small">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                  tempor invidunt ut labore et dolore</p>
+                <p class="fs-small"><img src="/assets/img/step05.jpeg" alt="" class=""></p>
               </div>
             </div>
             <div class="iconic-item wow fadeInUp">
@@ -258,8 +262,7 @@
               </div>
               <div class="iconic-content">
                 <h5>Start earning limitlessly.</h5>
-                <p class="fs-small">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                  tempor invidunt ut labore et dolore</p>
+                <p class="fs-small"><img src="/assets/img/step06.jpeg" alt="" class=""></p>
               </div>
             </div>
           </div>
@@ -540,54 +543,54 @@
         <!-- <p>Become a <a href="#">partners?</a></p> -->
       </div>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 justify-content-center align-items-center mt-5">
-        <div class="p-3 wow zoomIn">
+        <div class="p-1 wow zoomIn benefits" >
           <div class="theme-list">
-        <li class="list-item">Earn Limitlessly</li>
+        <li class="list-item">Trips</li>
           </div>
         </div>
-        <div class="p-3 wow zoomIn">
+        <div class="p-1 wow zoomIn benefits" >
           <div class="theme-list">
-            <li class="list-item">IRDA certified POSP</li>
+            <li class="list-item">Stipend</li>
               </div>
         </div>
-        <div class="p-3 wow zoomIn">
+        <div class="p-1 wow zoomIn benefits" >
           <div class="theme-list">
             <li class="list-item">Commission </li>
               </div>
         </div>
-        <div class="p-3 wow zoomIn">
+        <div class="p-1 wow zoomIn benefits" >
           <div class="theme-list">
-            <li class="list-item">Stipend </li>
+            <li class="list-item">IRDA certified POSP</li>
               </div>
         </div>
-        <div class="p-3 wow zoomIn">
+        <div class="p-1 wow zoomIn benefits" >
           <div class="theme-list">
-            <li class="list-item">Trips </li>
+            <li class="list-item">Earn Limitlessly</li>
               </div>
         </div>
-        <div class="p-3 wow zoomIn">
+        <div class="p-1 wow zoomIn benefits" >
           <div class="theme-list">
             <li class="list-item">Hands-on experience </li>
               </div>
         </div>
-        <div class="p-3 wow zoomIn">
+        <div class="p-1 wow zoomIn benefits" >
           <div class="theme-list">
             <li class="list-item">Great on Resume </li>
               </div>
         </div>
-        <div class="p-3 wow zoomIn">
+        <div class="p-1 wow zoomIn benefits" >
           <div class="theme-list">
-            <li class="list-item">Be your OWN boss </li>
+            <li class="list-item">Be your OWN boss</li>
               </div>
         </div>
-        <div class="p-3 wow zoomIn justify-content-center">
+        <div class="p-1 wow zoomIn justify-content-center benefits" >
           <div class="theme-list">
-            <li class="list-item">Work at any time from anywhere </li>
+            <li class="list-item">No prior experience required</li>
               </div>
         </div>
-        <div class="p-3 wow zoomIn">
+        <div class="p-1 wow zoomIn benefits" >
           <div class="theme-list">
-            <li class="list-item">No prior experience required </li>
+            <li class="list-item">Work at any time from anywhere</li>
               </div>
         </div>
       </div>
